Changes between 2.0.0 and ???:
---------------

 [pulse-binding]

 * Updated declared version compatability
 * Proplist: Fix debug output to use comma separator rather than newline (for consistency in
   dumping introspection data), and output in list style instead of mixed struct/list style.

 [pulse-sys]

 * Updated declared version compatability

Changes between 1.2.2 and 2.0.0:
---------------

 [pulse-binding]

 * Changed handling of callbacks to support closures! Now you can simply supply a closure, instead
   of an "extern C" function and a raw `c_void` data pointer, in almost any place across the
   binding's API that takes a callback. (Note, there are a few places that have not been changed:
   Tackling the mainloop API stuff has been postponed to look at later; same for the stream write
   method's optional 'free' callback; the `SpawnApi` has no userdata arg and thus cannot be done,
   which is not a big deal; finally the standard mainloop's function for specifying an alternate
   'poll' function has been left, at least for now).
 * Introspection: Big clean up. Previously we simply transmuted from the raw C structs, which was
   very efficient, and some attributes (like enums) transmuted perfectly to binding counterparts thus
   were 'clean'. A lot of attributes however were ugly, exposing raw pointers, particularly with
   strings and lists. Now instead a proper conversion is done. This takes more effort, but gives a
   much more pleasant to use interface. Note, the `Debug` trait has been implemented, thus combined
   with the new support of closures for callbacks, makes it very easy to dump a copy of
   introspection data.
 * Context: ext_*: Cleaned up in the same way as introspection.
 * Volume: Renamed `CVolume` to `ChannelVolumes`
 * Removed `Option` wrapper around `Operation` objects, using assertion that the inner pointer is
   not null.
 * Context: Handful of methods changed to take immutable `self`. Patches were previously sent in to